--- a/src/main/resources/assets/adaptivetooltips/lang/en_us.json
+++ b/src/main/resources/assets/adaptivetooltips/lang/en_us.json
@@ -2,10 +2,14 @@
   "adaptivetooltips.title": "Adaptive Tooltips",
   "adaptivetooltips.opt.text_wrapping.title": "Text Wrapping",
   "adaptivetooltips.opt.text_wrapping.desc": "How Adaptive Tooltips wraps tooltip text.",
+  "adaptivetooltips.opt.prioritize_tooltip_top.title": "Prioritize Tooltip Top",
+  "adaptivetooltips.opt.prioritize_tooltip_top.desc": "When the tooltip height is larger than the screen height, by default, minecraft prioritizes fitting the bottom on the screen, cutting off the top. This option changes that priority to the top, cutting off the bottom.",
   "adaptivetooltips.opt.bedrock_centering.title": "Bedrock Centering",
   "adaptivetooltips.opt.bedrock_centering.desc": "When the tooltip is too long to be rendered on the screen, the tooltip is positioned in the center of the mouse, instead of the left or the right.",
   "adaptivetooltips.opt.align_to_corner.title": "Align To Corner",
   "adaptivetooltips.opt.align_to_corner.desc": "When all else fails (including bedrock centering) Adaptive Tooltips determines the least obstructive corner to align the tooltip too. Best to be used with screen width text wrapping.",
+  "adaptivetooltips.opt.always_align_corner.title": "Always Align Corner",
+  "adaptivetooltips.opt.always_align_corner.desc": "Always align to corners, even when it is not needed.",
   "adaptivetooltips.opt.clamp_tooltip_pos.title": "Clamp Tooltip Position",
   "adaptivetooltips.opt.clamp_tooltip_pos.desc": "Prevent tooltip from going off-screen by not allowing the position to clip off the screen.",
   "adaptivetooltips.label.scrolling_instructions": "Hold %s and scroll while a tooltip is displaying to scroll up and down on it, hold %s at the same time to scroll horizontally instead.",
@@ -13,10 +17,15 @@
   "adaptivetooltips.opt.vertical_scroll_sensitivity.desc": "Amount of pixels to move the tooltip vertically per scroll step.",
   "adaptivetooltips.opt.horizontal_scroll_sensitivity.title": "Horizontal Scroll Sensitivity",
   "adaptivetooltips.opt.horizontal_scroll_sensitivity.desc": "Amount of pixels to move the tooltip horizontal per scroll step.",
+  "adaptivetooltips.opt.smooth_scrolling.title": "Smooth Scrolling",
+  "adaptivetooltips.opt.smooth_scrolling.desc": "Tooltip scrolling appears smooth, instead of instant.",
+  "adaptivetooltips.opt.tooltip_transparency.title": "Tooltip Transparency",
+  "adaptivetooltips.opt.tooltip_transparency.desc": "Modifies the transparency of tooltips by a percentage.",
   "adaptivetooltips.wrap_text_behaviour.off": "Off",
   "adaptivetooltips.wrap_text_behaviour.screen_width": "Screen width",
   "adaptivetooltips.wrap_text_behaviour.remaining_width": "Remaining width",
   "adaptivetooltips.format.pixels": "%s pixels",
+  "adaptivetooltips.format.vanilla": "Vanilla",
   "adaptivetooltips.bind.scroll": "Enable Tooltip Scrolling",
   "adaptivetooltips.bind.horizontal_scroll": "Enable Horizontal Scrolling",
   "adaptivetooltips.gui.awaiting_key": "Press a key"
