natural scrolling, ScrollTracker refactor, named groups

--- a/src/main/resources/assets/adaptivetooltips/lang/en_us.json
+++ b/src/main/resources/assets/adaptivetooltips/lang/en_us.json
@@ -1,7 +1,11 @@
 {
   "adaptivetooltips.title": "Adaptive Tooltips",
+  "adaptivetooltips.group.content_manipulation.title": "Content Manipulation",
+  "adaptivetooltips.group.content_manipulation.desc": "This group of options modifies the content of the tooltip.",
   "adaptivetooltips.opt.text_wrapping.title": "Text Wrapping",
   "adaptivetooltips.opt.text_wrapping.desc": "How Adaptive Tooltips wraps tooltip text.",
+  "adaptivetooltips.group.positioning.title": "Positioning",
+  "adaptivetooltips.group.positioning.desc": "This group of options determines where the tooltip will appear on the screen.",
   "adaptivetooltips.opt.prioritize_tooltip_top.title": "Prioritize Tooltip Top",
   "adaptivetooltips.opt.prioritize_tooltip_top.desc": "When the tooltip height is larger than the screen height, by default, minecraft prioritizes fitting the bottom on the screen, cutting off the top. This option changes that priority to the top, cutting off the bottom.",
   "adaptivetooltips.opt.bedrock_centering.title": "Bedrock Centering",
@@ -12,18 +16,26 @@
   "adaptivetooltips.opt.always_align_corner.desc": "Always align to corners, even when it is not needed.",
   "adaptivetooltips.opt.clamp_tooltip_pos.title": "Clamp Tooltip Position",
   "adaptivetooltips.opt.clamp_tooltip_pos.desc": "Prevent tooltip from going off-screen by not allowing the position to clip off the screen.",
-  "adaptivetooltips.label.scrolling_instructions": "Hold %s and scroll while a tooltip is displaying to scroll up and down on it, hold %s at the same time to scroll horizontally instead.",
+  "adaptivetooltips.group.scrolling.title": "Scrolling",
+  "adaptivetooltips.group.scrolling.desc": "Controls behavior of the scrolling feature in AdaptiveTooltips.",
+  "adaptivetooltips.label.scrolling_instructions": "Hold %s and scroll while a tooltip is displaying to scroll up and down on it, scroll left and right to move it horizontally. Alternatively, hold %s at the same time to scroll horizontally instead.",
+  "adaptivetooltips.opt.smooth_scrolling.title": "Smooth Scrolling",
+  "adaptivetooltips.opt.smooth_scrolling.desc": "Tooltip scrolling appears smooth, instead of instant.",
+  "adaptivetooltips.opt.scroll_direction.title": "Scroll Direction",
+  "adaptivetooltips.opt.scroll_direction.desc": "Which direction tooltip scrolling goes in.",
   "adaptivetooltips.opt.vertical_scroll_sensitivity.title": "Vertical Scroll Sensitivity",
   "adaptivetooltips.opt.vertical_scroll_sensitivity.desc": "Amount of pixels to move the tooltip vertically per scroll step.",
   "adaptivetooltips.opt.horizontal_scroll_sensitivity.title": "Horizontal Scroll Sensitivity",
   "adaptivetooltips.opt.horizontal_scroll_sensitivity.desc": "Amount of pixels to move the tooltip horizontal per scroll step.",
-  "adaptivetooltips.opt.smooth_scrolling.title": "Smooth Scrolling",
-  "adaptivetooltips.opt.smooth_scrolling.desc": "Tooltip scrolling appears smooth, instead of instant.",
+  "adaptivetooltips.group.style.title": "Style",
+  "adaptivetooltips.group.style.desc": "Options that modify how tooltips look.",
   "adaptivetooltips.opt.tooltip_transparency.title": "Tooltip Transparency",
   "adaptivetooltips.opt.tooltip_transparency.desc": "Modifies the transparency of tooltips by a percentage.",
   "adaptivetooltips.wrap_text_behaviour.off": "Off",
   "adaptivetooltips.wrap_text_behaviour.screen_width": "Screen width",
   "adaptivetooltips.wrap_text_behaviour.remaining_width": "Remaining width",
+  "adaptivetooltips.scroll_direction.reverse": "Reverse (Windows)",
+  "adaptivetooltips.scroll_direction.natural": "Natural (macOS)",
   "adaptivetooltips.format.pixels": "%s pixels",
   "adaptivetooltips.format.vanilla": "Vanilla",
   "adaptivetooltips.bind.scroll": "Enable Tooltip Scrolling",
