lots of improvements - limit scroll amount so you can't scroll further than the top or the bottom - prevented use of scrolling when tooltip doesn't need it - reset scroll progress if hovered off then back on again - remove tooltip clamping option - fix flickering with align to corner - fix prioritize tooltip top not adjusting y pos correctly

--- a/src/main/resources/assets/adaptivetooltips/lang/en_us.json
+++ b/src/main/resources/assets/adaptivetooltips/lang/en_us.json
@@ -8,14 +8,13 @@
   "adaptivetooltips.group.positioning.desc": "This group of options determines where the tooltip will appear on the screen.",
   "adaptivetooltips.opt.prioritize_tooltip_top.title": "Prioritize Tooltip Top",
   "adaptivetooltips.opt.prioritize_tooltip_top.desc": "When the tooltip height is larger than the screen height, by default, minecraft prioritizes fitting the bottom on the screen, cutting off the top. This option changes that priority to the top, cutting off the bottom.",
+  "adaptivetooltips.opt.prioritize_tooltip_top.warn.align_to_corner": "Prevents vertical check for %s because tooltip never goes above screen.",
   "adaptivetooltips.opt.bedrock_centering.title": "Bedrock Centering",
   "adaptivetooltips.opt.bedrock_centering.desc": "When the tooltip is too long to be rendered on the screen, the tooltip is positioned in the center of the mouse, instead of the left or the right.",
   "adaptivetooltips.opt.align_to_corner.title": "Align To Corner",
   "adaptivetooltips.opt.align_to_corner.desc": "When all else fails (including bedrock centering) Adaptive Tooltips determines the least obstructive corner to align the tooltip too. Best to be used with screen width text wrapping.",
   "adaptivetooltips.opt.always_align_corner.title": "Always Align Corner",
   "adaptivetooltips.opt.always_align_corner.desc": "Always align to corners, even when it is not needed.",
-  "adaptivetooltips.opt.clamp_tooltip_pos.title": "Clamp Tooltip Position",
-  "adaptivetooltips.opt.clamp_tooltip_pos.desc": "Prevent tooltip from going off-screen by not allowing the position to clip off the screen.",
   "adaptivetooltips.group.scrolling.title": "Scrolling",
   "adaptivetooltips.group.scrolling.desc": "Controls behavior of the scrolling feature in AdaptiveTooltips.",
   "adaptivetooltips.label.scrolling_instructions": "Hold %s and scroll while a tooltip is displaying to scroll up and down on it, scroll left and right to move it horizontally. Alternatively, hold %s at the same time to scroll horizontally instead.",
