--- a/src/main/resources/assets/adaptivetooltips/lang/en_us.json
+++ b/src/main/resources/assets/adaptivetooltips/lang/en_us.json
@@ -15,6 +15,10 @@
   "adaptivetooltips.opt.align_to_corner.desc": "When all else fails (including bedrock centering) Adaptive Tooltips determines the least obstructive corner to align the tooltip too. Best to be used with screen width text wrapping.",
   "adaptivetooltips.opt.always_align_corner.title": "Always Align Corner",
   "adaptivetooltips.opt.always_align_corner.desc": "Always align to corners, even when it is not needed.",
+  "adaptivetooltips.opt.prevent_vanilla_clamping.title": "Prevent Vanilla Clamping",
+  "adaptivetooltips.opt.prevent_vanilla_clamping.desc": "As of 1.19.3, Minecraft prevents tooltips from going off the left side of the screen by setting a minimum position of 0. This can make tooltips overlap the hovered element and interfere with AdaptiveTooltips' tweaks.",
+  "adaptivetooltips.opt.apply_tweaks_to_all_positioners.title": "Apply Tweaks To All Positioners",
+  "adaptivetooltips.opt.apply_tweaks_to_all_positioners.desc": "As of 1.19.3, Minecraft has multiple methods of positioning tooltips: default and widget. 'Widget' places the tooltip above or below the widget. Enabling this makes AdaptiveTooltips work with all positioners (even modded ones).",
   "adaptivetooltips.group.scrolling.title": "Scrolling",
   "adaptivetooltips.group.scrolling.desc": "Controls behavior of the scrolling feature in AdaptiveTooltips.",
   "adaptivetooltips.label.scrolling_instructions": "Hold %s and scroll while a tooltip is displaying to scroll up and down on it, scroll left and right to move it horizontally. Alternatively, hold %s at the same time to scroll horizontally instead.",
