Lots of new features Add wrapping for renderOrderedTooltip & renderPositionedTooltip methods Prevent Vanilla Wrapping - stops tooltips from wrapping themselves to 170px in guis. YACL-style clickablewidget tooltip position - use the positioning from YetAnotherConfig for clickablewidget tooltips Remove first line padding - removes the extra 2px given to the first line to seperate it from the rest Rename applyTweaksToAllPositioners -> onlyRepositionHoverTooltips to be more clear Add HALF_SCREEN_WIDTH wrapping option Give wrapping setting dynamic tooltips to describe each method of wrapping Only allow REMAINING_WIDTH wrapping in hover positioners

--- a/src/main/resources/assets/adaptivetooltips/lang/en_us.json
+++ b/src/main/resources/assets/adaptivetooltips/lang/en_us.json
@@ -4,6 +4,8 @@
   "adaptivetooltips.group.content_manipulation.desc": "This group of options modifies the content of the tooltip.",
   "adaptivetooltips.opt.text_wrapping.title": "Text Wrapping",
   "adaptivetooltips.opt.text_wrapping.desc": "How Adaptive Tooltips wraps tooltip text.",
+  "adaptivetooltips.opt.prevent_vanilla_wrapping.title": "Prevent Vanilla Wrapping",
+  "adaptivetooltips.opt.prevent_vanilla_wrapping.desc": "Stop vanilla from applying text wrapping to tooltips in the GUI.",
   "adaptivetooltips.group.positioning.title": "Positioning",
   "adaptivetooltips.group.positioning.desc": "This group of options determines where the tooltip will appear on the screen.",
   "adaptivetooltips.opt.prioritize_tooltip_top.title": "Prioritize Tooltip Top",
@@ -17,8 +19,10 @@
   "adaptivetooltips.opt.always_align_corner.desc": "Always align to corners, even when it is not needed.",
   "adaptivetooltips.opt.prevent_vanilla_clamping.title": "Prevent Vanilla Clamping",
   "adaptivetooltips.opt.prevent_vanilla_clamping.desc": "As of 1.19.3, Minecraft prevents tooltips from going off the left side of the screen by setting a minimum position of 0. This can make tooltips overlap the hovered element and interfere with AdaptiveTooltips' tweaks.",
-  "adaptivetooltips.opt.apply_tweaks_to_all_positioners.title": "Apply Tweaks To All Positioners",
-  "adaptivetooltips.opt.apply_tweaks_to_all_positioners.desc": "As of 1.19.3, Minecraft has multiple methods of positioning tooltips: default and widget. 'Widget' places the tooltip above or below the widget. Enabling this makes AdaptiveTooltips work with all positioners (even modded ones).",
+  "adaptivetooltips.opt.only_reposition_hover_tooltips.title": "Only Reposition Hover Tooltips",
+  "adaptivetooltips.opt.only_reposition_hover_tooltips.desc": "As of 1.19.3, Minecraft added two types of tooltip positioning: Hover & Focused. 'Hover' is the old method, 'Focused' places tooltips above or below a button widget. Disabling this setting allows AdaptiveTooltips to reposition all types of positioners, including focused and any other modded ones.",
+  "adaptivetooltips.opt.use_yacl_tooltip_positioner.title": "YACL-style GUI Tooltip Position",
+  "adaptivetooltips.opt.use_yacl_tooltip_positioner.desc": "Use the positioning of YetAnotherConfigLib for all GUI button widgets. (The same position as the tooltip you are reading this in)",
   "adaptivetooltips.group.scrolling.title": "Scrolling",
   "adaptivetooltips.group.scrolling.desc": "Controls behavior of the scrolling feature in AdaptiveTooltips.",
   "adaptivetooltips.label.scrolling_instructions": "Hold %s and scroll while a tooltip is displaying to scroll up and down on it, scroll left and right to move it horizontally. Alternatively, hold %s at the same time to scroll horizontally instead.",
@@ -34,9 +38,16 @@
   "adaptivetooltips.group.style.desc": "Options that modify how tooltips look.",
   "adaptivetooltips.opt.tooltip_transparency.title": "Tooltip Transparency",
   "adaptivetooltips.opt.tooltip_transparency.desc": "Modifies the transparency of tooltips by a percentage.",
+  "adaptivetooltips.opt.remove_first_line_padding.title": "Remove First Line Padding",
+  "adaptivetooltips.opt.remove_first_line_padding.desc": "Removes the extra 2 pixels of line padding from the first line of the tooltip.",
   "adaptivetooltips.wrap_text_behaviour.off": "Off",
   "adaptivetooltips.wrap_text_behaviour.screen_width": "Screen width",
+  "adaptivetooltips.wrap_text_behaviour.screen_width.desc": "Wraps tooltips based on how wide the screen is. Designed to be paired with 'Bedrock Centering' option.",
   "adaptivetooltips.wrap_text_behaviour.remaining_width": "Remaining width",
+  "adaptivetooltips.wrap_text_behaviour.remaining_width.desc": "Wraps tooltips based on amount of space left until the edge of the screen.",
+  "adaptivetooltips.wrap_text_behaviour.remaining_width.warning": "Only works with hover tooltip positioners! For more details see description of 'Only Reposition Hover Tooltips'.",
+  "adaptivetooltips.wrap_text_behaviour.half_screen_width": "Half screen width",
+  "adaptivetooltips.wrap_text_behaviour.half_screen_width.desc": "Wraps tooltips with the max width of half of the screen width, so tooltips can at most, only fill half of your screen horizontally.",
   "adaptivetooltips.scroll_direction.reverse": "Reverse (Windows)",
   "adaptivetooltips.scroll_direction.natural": "Natural (macOS)",
   "adaptivetooltips.format.pixels": "%s pixels",
