--- a/src/main/resources/assets/adaptivetooltips/lang/ru_ru.json
+++ b/src/main/resources/assets/adaptivetooltips/lang/ru_ru.json
@@ -4,6 +4,8 @@
   "adaptivetooltips.group.content_manipulation.desc": "Настройка содержимого подсказки.",
   "adaptivetooltips.opt.text_wrapping.title": "Перенос текста",
   "adaptivetooltips.opt.text_wrapping.desc": "Настройка переноса длинных строк текста в подсказках.",
+  "adaptivetooltips.opt.overwrite_vanilla_wrapping.title": "Отключить ванильный перенос",
+  "adaptivetooltips.opt.overwrite_vanilla_wrapping.desc": "Заменить ванильный перенос текста в подсказках на перенос из Adaptive Tooltips.",
   "adaptivetooltips.group.positioning.title": "Положение",
   "adaptivetooltips.group.positioning.desc": "Настройка положения подсказки на экране.",
   "adaptivetooltips.opt.prioritize_tooltip_top.title": "Сохранять верх подсказки",
@@ -15,6 +17,12 @@
   "adaptivetooltips.opt.align_to_corner.desc": "Когда всё остальное не помогло, подсказка будет помещена в наименее мешающий угол. Лучше использовать с переносом текста по ширине экрана.",
   "adaptivetooltips.opt.always_align_corner.title": "Всегда отображать в углах",
   "adaptivetooltips.opt.always_align_corner.desc": "Подсказки будут всегда отображаться в углах, даже если в этом нет необходимости.",
+  "adaptivetooltips.opt.prevent_vanilla_clamping.title": "Отключить привязку к краю",
+  "adaptivetooltips.opt.prevent_vanilla_clamping.desc": "Начиная с 1.19.3 Minecraft блокирует смещение подсказки за пределы левого края экрана. Из-за этого они могут перекрывать курсор мыши при использовании Adaptive Tooltips.",
+  "adaptivetooltips.opt.only_reposition_hover_tooltips.title": "Изменять только подсказки по наведению",
+  "adaptivetooltips.opt.only_reposition_hover_tooltips.desc": "Начиная с 1.19.3 в Minecraft присутствует 2 типа всплывающих подсказок: \"наведение\" и \"фокус\". \"Наведение\" – это старый метод размещения, \"фокус\" размещает подсказку выше или ниже целевого элемента. Отключение этой настройки разрешит Adaptive Tooltips менять положение любых типов подсказок, в том числе подсказок из других модов.",
+  "adaptivetooltips.opt.use_yacl_tooltip_positioner.title": "Размещение в стиле YACL",
+  "adaptivetooltips.opt.use_yacl_tooltip_positioner.desc": "Использовать размещение подсказок как в YetAnotherConfigLib для всех элементов интерфейса (то есть так, как выглядит эта подсказка).",
   "adaptivetooltips.group.scrolling.title": "Прокрутка",
   "adaptivetooltips.group.scrolling.desc": "Настройка управления прокруткой.",
   "adaptivetooltips.label.scrolling_instructions": "Удерживайте \"%s\" при наведении на подсказку для её прокрутки вращением вверх/вниз (по вертикали) или влево/вправо (по горизонтали). В качестве альтернативы для горизонтальной прокрутки можно дополнительно зажать \"%s\".",
@@ -30,9 +38,17 @@
   "adaptivetooltips.group.style.desc": "Настройка внешнего вида подсказок.",
   "adaptivetooltips.opt.tooltip_transparency.title": "Непрозрачность фона",
   "adaptivetooltips.opt.tooltip_transparency.desc": "Изменение прозрачности фона в процентах.",
+  "adaptivetooltips.opt.remove_first_line_padding.title": "Убрать смещение первой строки",
+  "adaptivetooltips.opt.remove_first_line_padding.desc": "Отключить смещение первой строки подсказки на 2 дополнительных пикселя.",
   "adaptivetooltips.wrap_text_behaviour.off": "Отключён",
+  "adaptivetooltips.wrap_text_behaviour.off.desc": "Без переноса текста в подсказках.",
   "adaptivetooltips.wrap_text_behaviour.screen_width": "По ширине экрана",
+  "adaptivetooltips.wrap_text_behaviour.screen_width.desc": "Текст переносится с учётом ширины экрана. Лучше всего смотрится с настройкой \"Выравнивать по центру\".",
   "adaptivetooltips.wrap_text_behaviour.remaining_width": "Динамический",
+  "adaptivetooltips.wrap_text_behaviour.remaining_width.desc": "Текст переносится динамически, учитывая оставшееся место до края экрана.",
+  "adaptivetooltips.wrap_text_behaviour.remaining_width.warning": "Работает только с подсказками по наведению курсора! Подробнее читайте в описании настройки \"Изменять только подсказки по наведению\".",
+  "adaptivetooltips.wrap_text_behaviour.half_screen_width": "Половинная ширина",
+  "adaptivetooltips.wrap_text_behaviour.half_screen_width.desc": "Установить лимит ширины посказки в половину ширины экрана, чтобы подсказка не заполняла весь экран по горизонтали.",
   "adaptivetooltips.scroll_direction.reverse": "Обратное (Windows)",
   "adaptivetooltips.scroll_direction.natural": "Обычное (macOS)",
   "adaptivetooltips.format.pixels": "%s пикселей",
@@ -40,6 +56,8 @@
   "adaptivetooltips.bind.scroll": "Прокрутка по вертикали",
   "adaptivetooltips.bind.horizontal_scroll": "Прокрутка по горизонтали",
   "adaptivetooltips.gui.awaiting_key": "Нажмите клавишу",
+  "adaptivetooltips.gui.require_opt.on": "Требует включения \"%s\".",
+  "adaptivetooltips.gui.require_opt.off": "Требует отключения \"%s\".",
 
   "modmenu.summaryTranslation.adaptive-tooltips": "Гибкая настройка размещения подсказок на экране.",
   "modmenu.descriptionTranslation.adaptive-tooltips": "Инструмент для гибкой настройки отображения подсказок, чтобы они всегда умещались на экране."
