--- a/src/main/resources/assets/adaptivetooltips/lang/zh_cn.json
+++ b/src/main/resources/assets/adaptivetooltips/lang/zh_cn.json
@@ -31,9 +31,9 @@
   "adaptivetooltips.opt.scroll_direction.title": "滚动方向",
   "adaptivetooltips.opt.scroll_direction.desc": "提示框滚动的方向。",
   "adaptivetooltips.opt.vertical_scroll_sensitivity.title": "垂直滚动灵敏度",
-  "adaptivetooltips.opt.vertical_scroll_sensitivity.desc": "每次滚动提示框垂直移动的像素数。",
+  "adaptivetooltips.opt.vertical_scroll_sensitivity.desc": "每次垂直滚动提示框移动的像素数。",
   "adaptivetooltips.opt.horizontal_scroll_sensitivity.title": "水平滚动灵敏度",
-  "adaptivetooltips.opt.horizontal_scroll_sensitivity.desc": "每次滚动提示框水平移动的像素数。",
+  "adaptivetooltips.opt.horizontal_scroll_sensitivity.desc": "每次水平滚动提示框移动的像素数。",
   "adaptivetooltips.group.style.title": "样式",
   "adaptivetooltips.group.style.desc": "修改提示框外观的选项。",
   "adaptivetooltips.opt.tooltip_transparency.title": "提示框透明度",
@@ -50,7 +50,7 @@
   "adaptivetooltips.wrap_text_behaviour.half_screen_width": "半屏宽度",
   "adaptivetooltips.wrap_text_behaviour.half_screen_width.desc": "提示框的最大宽度为屏幕宽度的一半，因此提示框最多只能水平占满屏幕的一半。",
   "adaptivetooltips.wrap_text_behaviour.smart": "智能",
-  "adaptivetooltips.wrap_text_behaviour.smart.desc": "为比其他行长得多的行换行，硬限制为屏幕宽度的3/4。",
+  "adaptivetooltips.wrap_text_behaviour.smart.desc": "为过长的行换行，硬限制为屏幕宽度的3/4。",
   "adaptivetooltips.scroll_direction.reverse": "反转 (Windows)",
   "adaptivetooltips.scroll_direction.natural": "自然 (macOS)",
   "adaptivetooltips.format.pixels": "%s像素",
