--- a/src/main/resources/assets/adaptivetooltips/lang/zh_cn.json
+++ b/src/main/resources/assets/adaptivetooltips/lang/zh_cn.json
@@ -21,7 +21,7 @@
   "adaptivetooltips.opt.prevent_vanilla_clamping.desc": "自1.19.3起，Minecraft通过设置最小位置为0来防止提示框偏离屏幕左侧。这会使其与悬停元素重叠，并干扰此模组的调整。",
   "adaptivetooltips.opt.only_reposition_hover_tooltips.title": "仅重新定位悬停提示框",
   "adaptivetooltips.opt.only_reposition_hover_tooltips.desc": "自1.19.3起，Minecraft添加了两种提示框定位方式：悬停和聚焦。“悬停”是老方法，“聚焦”则是将提示框置于按钮部件的上方或下方。禁用此设置可让此模组重新定位所有类型的定位器，包括“聚焦”和任何其他修改的。",
-  "adaptivetooltips.opt.use_yacl_tooltip_positioner.title": "YACL风格GUI提示框位置",
+  "adaptivetooltips.opt.use_yacl_tooltip_positioner.title": "YACL样式GUI提示框位置",
   "adaptivetooltips.opt.use_yacl_tooltip_positioner.desc": "对所有GUI按钮部件使用YetAnotherConfigLib的定位（与您正在阅读的提示框位置相同）。",
   "adaptivetooltips.group.scrolling.title": "滚动",
   "adaptivetooltips.group.scrolling.desc": "控制此模组中滚动功能的行为。",
