Hello, 1.20! A bit late...

--- a/src/main/resources/assets/adaptivetooltips/lang/en_us.json
+++ b/src/main/resources/assets/adaptivetooltips/lang/en_us.json
@@ -1,45 +1,45 @@
 {
-  "adaptivetooltips.title": "Adaptive Tooltips",
-  "adaptivetooltips.group.content_manipulation.title": "Content Manipulation",
-  "adaptivetooltips.group.content_manipulation.desc": "This group of options modifies the content of the tooltip.",
-  "adaptivetooltips.opt.text_wrapping.title": "Text Wrapping",
-  "adaptivetooltips.opt.text_wrapping.desc": "How Adaptive Tooltips wraps tooltip text.",
-  "adaptivetooltips.opt.overwrite_vanilla_wrapping.title": "Overwrite Vanilla Wrapping",
-  "adaptivetooltips.opt.overwrite_vanilla_wrapping.desc": "Stop vanilla from applying its own text wrapping to tooltips in the GUI and use AdaptiveTooltip's instead.",
-  "adaptivetooltips.group.positioning.title": "Positioning",
-  "adaptivetooltips.group.positioning.desc": "This group of options determines where the tooltip will appear on the screen.",
-  "adaptivetooltips.opt.prioritize_tooltip_top.title": "Prioritize Tooltip Top",
-  "adaptivetooltips.opt.prioritize_tooltip_top.desc": "When the tooltip height is larger than the screen height, by default, minecraft prioritizes fitting the bottom on the screen, cutting off the top. This option changes that priority to the top, cutting off the bottom.",
+  "yacl3.config.adaptivetooltips:config.category.adaptivetooltips": "Adaptive Tooltips",
+  "yacl3.config.adaptivetooltips:config.category.adaptivetooltips.group.content_manipulation": "Content Manipulation",
+  "yacl3.config.adaptivetooltips:config.category.adaptivetooltips.group.content_manipulation.desc": "This group of options modifies the content of the tooltip.",
+  "yacl3.config.adaptivetooltips:config.wrapText": "Text Wrapping",
+  "yacl3.config.adaptivetooltips:config.wrapText.desc": "How Adaptive Tooltips wraps tooltip text.",
+  "yacl3.config.adaptivetooltips:config.overwriteVanillaWrapping": "Overwrite Vanilla Wrapping",
+  "yacl3.config.adaptivetooltips:config.overwriteVanillaWrapping.desc": "Stop vanilla from applying its own text wrapping to tooltips in the GUI and use AdaptiveTooltip's instead.",
+  "yacl3.config.adaptivetooltips:config.category.adaptivetooltips.group.positioning": "Positioning",
+  "yacl3.config.adaptivetooltips:config.category.adaptivetooltips.group.positioning.desc": "This group of options determines where the tooltip will appear on the screen.",
+  "yacl3.config.adaptivetooltips:config.prioritizeTooltipTop": "Prioritize Tooltip Top",
+  "yacl3.config.adaptivetooltips:config.prioritizeTooltipTop.desc": "When the tooltip height is larger than the screen height, by default, minecraft prioritizes fitting the bottom on the screen, cutting off the top. This option changes that priority to the top, cutting off the bottom.",
   "adaptivetooltips.opt.prioritize_tooltip_top.warn.align_to_corner": "Prevents vertical check for %s because tooltip never goes above screen.",
-  "adaptivetooltips.opt.bedrock_centering.title": "Bedrock Centering",
-  "adaptivetooltips.opt.bedrock_centering.desc": "When the tooltip is too long to be rendered on the screen, the tooltip is positioned in the center of the mouse, instead of the left or the right.",
-  "adaptivetooltips.opt.align_to_corner.title": "Align To Corner",
-  "adaptivetooltips.opt.align_to_corner.desc": "When all else fails (including bedrock centering) Adaptive Tooltips determines the least obstructive corner to align the tooltip too. Best to be used with screen width text wrapping.",
-  "adaptivetooltips.opt.always_align_corner.title": "Always Align Corner",
-  "adaptivetooltips.opt.always_align_corner.desc": "Always align to corners, even when it is not needed.",
-  "adaptivetooltips.opt.prevent_vanilla_clamping.title": "Prevent Vanilla Clamping",
-  "adaptivetooltips.opt.prevent_vanilla_clamping.desc": "As of 1.19.3, Minecraft prevents tooltips from going off the left side of the screen by setting a minimum position of 0. This can make tooltips overlap the hovered element and interfere with AdaptiveTooltips' tweaks.",
-  "adaptivetooltips.opt.only_reposition_hover_tooltips.title": "Only Reposition Hover Tooltips",
-  "adaptivetooltips.opt.only_reposition_hover_tooltips.desc": "As of 1.19.3, Minecraft added two types of tooltip positioning: Hover & Focused. 'Hover' is the old method, 'Focused' places tooltips above or below a button widget. Disabling this setting allows AdaptiveTooltips to reposition all types of positioners, including focused and any other modded ones.",
-  "adaptivetooltips.opt.use_yacl_tooltip_positioner.title": "YACL-style GUI Tooltip Position",
-  "adaptivetooltips.opt.use_yacl_tooltip_positioner.desc": "Use the positioning of YetAnotherConfigLib for all GUI button widgets. (The same position as the tooltip you are reading this in)",
-  "adaptivetooltips.group.scrolling.title": "Scrolling",
+  "yacl3.config.adaptivetooltips:config.bedrockCentering": "Bedrock Centering",
+  "yacl3.config.adaptivetooltips:config.bedrockCentering.desc": "When the tooltip is too long to be rendered on the screen, the tooltip is positioned in the center of the mouse, instead of the left or the right.",
+  "yacl3.config.adaptivetooltips:config.bestCorner": "Align To Corner",
+  "yacl3.config.adaptivetooltips:config.bestCorner.desc": "When all else fails (including bedrock centering) Adaptive Tooltips determines the least obstructive corner to align the tooltip too. Best to be used with screen width text wrapping.",
+  "yacl3.config.adaptivetooltips:config.alwaysBestCorner": "Always Align Corner",
+  "yacl3.config.adaptivetooltips:config.alwaysBestCorner.desc": "Always align to corners, even when it is not needed.",
+  "yacl3.config.adaptivetooltips:config.preventVanillaClamping": "Prevent Vanilla Clamping",
+  "yacl3.config.adaptivetooltips:config.preventVanillaClamping.desc": "As of 1.19.3, Minecraft prevents tooltips from going off the left side of the screen by setting a minimum position of 0. This can make tooltips overlap the hovered element and interfere with AdaptiveTooltips' tweaks.",
+  "yacl3.config.adaptivetooltips:config.onlyRepositionHoverTooltips": "Only Reposition Hover Tooltips",
+  "yacl3.config.adaptivetooltips:config.onlyRepositionHoverTooltips.desc": "As of 1.19.3, Minecraft added two types of tooltip positioning: Hover & Focused. 'Hover' is the old method, 'Focused' places tooltips above or below a button widget. Disabling this setting allows AdaptiveTooltips to reposition all types of positioners, including focused and any other modded ones.",
+  "yacl3.config.adaptivetooltips:config.useYACLTooltipPositioner": "YACL-style GUI Tooltip Position",
+  "yacl3.config.adaptivetooltips:config.useYACLTooltipPositioner.desc": "Use the positioning of YetAnotherConfigLib for all GUI button widgets. (The same position as the tooltip you are reading this in)",
+  "yacl3.config.adaptivetooltips:config.category.adaptivetooltips.group.scrolling": "Scrolling",
   "adaptivetooltips.group.scrolling.desc": "Controls behavior of the scrolling feature in AdaptiveTooltips.",
   "adaptivetooltips.label.scrolling_instructions": "Hold %s and scroll while a tooltip is displaying to scroll up and down on it, scroll left and right to move it horizontally. Alternatively, hold %s at the same time to scroll horizontally instead.",
-  "adaptivetooltips.opt.smooth_scrolling.title": "Smooth Scrolling",
-  "adaptivetooltips.opt.smooth_scrolling.desc": "Tooltip scrolling appears smooth, instead of instant.",
-  "adaptivetooltips.opt.scroll_direction.title": "Scroll Direction",
-  "adaptivetooltips.opt.scroll_direction.desc": "Which direction tooltip scrolling goes in.",
-  "adaptivetooltips.opt.vertical_scroll_sensitivity.title": "Vertical Scroll Sensitivity",
-  "adaptivetooltips.opt.vertical_scroll_sensitivity.desc": "Amount of pixels to move the tooltip vertically per scroll step.",
-  "adaptivetooltips.opt.horizontal_scroll_sensitivity.title": "Horizontal Scroll Sensitivity",
-  "adaptivetooltips.opt.horizontal_scroll_sensitivity.desc": "Amount of pixels to move the tooltip horizontal per scroll step.",
-  "adaptivetooltips.group.style.title": "Style",
-  "adaptivetooltips.group.style.desc": "Options that modify how tooltips look.",
-  "adaptivetooltips.opt.tooltip_transparency.title": "Tooltip Transparency",
-  "adaptivetooltips.opt.tooltip_transparency.desc": "Modifies the transparency of tooltips by a percentage.",
-  "adaptivetooltips.opt.remove_first_line_padding.title": "Remove First Line Padding",
-  "adaptivetooltips.opt.remove_first_line_padding.desc": "Removes the extra 2 pixels of line padding from the first line of the tooltip.",
+  "yacl3.config.adaptivetooltips:config.smoothScrolling": "Smooth Scrolling",
+  "yacl3.config.adaptivetooltips:config.smoothScrolling.desc": "Tooltip scrolling appears smooth, instead of instant.",
+  "yacl3.config.adaptivetooltips:config.scrollDirection": "Scroll Direction",
+  "yacl3.config.adaptivetooltips:config.scrollDirection.desc": "Which direction tooltip scrolling goes in.",
+  "yacl3.config.adaptivetooltips:config.verticalScrollSensitivity": "Vertical Scroll Sensitivity",
+  "yacl3.config.adaptivetooltips:config.verticalScrollSensitivity.desc": "Amount of pixels to move the tooltip vertically per scroll step.",
+  "yacl3.config.adaptivetooltips:config.horizontalScrollSensitivity": "Horizontal Scroll Sensitivity",
+  "yacl3.config.adaptivetooltips:config.horizontalScrollSensitivity.desc": "Amount of pixels to move the tooltip horizontal per scroll step.",
+  "yacl3.config.adaptivetooltips:config.category.adaptivetooltips.group.style": "Style",
+  "yacl3.config.adaptivetooltips:config.category.adaptivetooltips.group.style.desc": "Options that modify how tooltips look.",
+  "yacl3.config.adaptivetooltips:config.tooltipTransparency": "Tooltip Transparency",
+  "yacl3.config.adaptivetooltips:config.tooltipTransparency.desc": "Modifies the transparency of tooltips by a percentage.",
+  "yacl3.config.adaptivetooltips:config.removeFirstLinePadding": "Remove First Line Padding",
+  "yacl3.config.adaptivetooltips:config.removeFirstLinePadding.desc": "Removes the extra 2 pixels of line padding from the first line of the tooltip.",
   "adaptivetooltips.wrap_text_behaviour.off": "Off",
   "adaptivetooltips.wrap_text_behaviour.off.desc": "Applies no wrapping to tooltips.",
   "adaptivetooltips.wrap_text_behaviour.screen_width": "Screen width",
