--- a/src/main/resources/assets/adaptivetooltips/lang/zh_cn.json
+++ b/src/main/resources/assets/adaptivetooltips/lang/zh_cn.json
@@ -1,63 +1,65 @@
 {
-  "adaptivetooltips.title": "Adaptive Tooltips",
-  "adaptivetooltips.group.content_manipulation.title": "内容修改",
-  "adaptivetooltips.group.content_manipulation.desc": "这组选项修改工具提示的内容",
-  "adaptivetooltips.opt.text_wrapping.title": "文本换行",
-  "adaptivetooltips.opt.text_wrapping.desc": "Adaptive Tooltips 该如何给文本换行",
-  "adaptivetooltips.opt.overwrite_vanilla_wrapping.title": "覆盖原版换行",
-  "adaptivetooltips.opt.overwrite_vanilla_wrapping.desc": "不让原版在GUI的工具提示中应用自己的文本换行，而是使用 Adaptive Tooltip 的",
-  "adaptivetooltips.group.positioning.title": "配置",
-  "adaptivetooltips.group.positioning.desc": "这组选项决定了工具提示在屏幕上的显示位置",
-  "adaptivetooltips.opt.prioritize_tooltip_top.title": "优先显示工具提示顶部",
-  "adaptivetooltips.opt.prioritize_tooltip_top.desc": "当工具提示高度大于屏幕高度时，默认情况下，minecraft会优先调整屏幕底部，裁掉顶部。此选项会将优先级更改为顶部，并裁掉底部。",
-  "adaptivetooltips.opt.prioritize_tooltip_top.warn.align_to_corner": "防止对%s进行垂直检查，因为工具提示不会超出屏幕。",
-  "adaptivetooltips.opt.bedrock_centering.title": "基岩版居中",
-  "adaptivetooltips.opt.bedrock_centering.desc": "当工具提示太长而无法在屏幕上呈现时，工具提示会放置在鼠标的中央，而不是左侧或右侧。",
-  "adaptivetooltips.opt.align_to_corner.title": "与角对齐",
-  "adaptivetooltips.opt.align_to_corner.desc": "当其他方法都失效时(包括基岩版居中)，Adaptive Tooltips 也会确定障碍最小的角落来对齐工具提示。与屏幕宽度文本换行一起使用最佳。",
-  "adaptivetooltips.opt.always_align_corner.title": "始终对齐角",
-  "adaptivetooltips.opt.always_align_corner.desc": "即使不需要，也要与角对齐",
-  "adaptivetooltips.opt.prevent_vanilla_clamping.title": "避免原版夹紧",
-  "adaptivetooltips.opt.prevent_vanilla_clamping.desc": "从1.19.3开始，Minecraft 通过将最小位置设置为0来防止工具提示离开屏幕左侧。这可能会使工具提示与悬停的元素重叠，并干扰 Adaptive Tooltip 的调整。",
-  "adaptivetooltips.opt.only_reposition_hover_tooltips.title": "仅重新定位悬停工具提示",
-  "adaptivetooltips.opt.only_reposition_hover_tooltips.desc": "从1.19.3开始，Minecraft 增加了两种工具提示定位:悬停和聚焦。“悬停”是老方法，“聚焦”是将工具提示放在按钮部件的上方或下方。禁用此设置允许 Adaptive Tooltip 重新定位所有类型的定位，包括聚焦的和任何其他修改的定位。",
-  "adaptivetooltips.opt.use_yacl_tooltip_positioner.title": "YACL风格的GUI工具提示位置",
-  "adaptivetooltips.opt.use_yacl_tooltip_positioner.desc": "对所有GUI按钮小部件使用 YetAnotherConfigLib 的定位。（与您正在阅读的工具提示位置相同）",
-  "adaptivetooltips.group.scrolling.title": "滚动",
-  "adaptivetooltips.group.scrolling.desc": "控制 Adaptive Tooltips 中滚动功能的行为",
-  "adaptivetooltips.label.scrolling_instructions": "当工具提示显示时，按住 %s 并滚动可以上下滚动，左右滚动可以水平移动。或者，同时按住 %s 改为水平滚动。",
-  "adaptivetooltips.opt.smooth_scrolling.title": "平滑滚动",
-  "adaptivetooltips.opt.smooth_scrolling.desc": "工具提示滚动显得更平滑，而不是即时的",
-  "adaptivetooltips.opt.scroll_direction.title": "滚动方向",
-  "adaptivetooltips.opt.scroll_direction.desc": "工具提示滚动的方向",
-  "adaptivetooltips.opt.vertical_scroll_sensitivity.title": "垂直滚动灵敏度",
-  "adaptivetooltips.opt.vertical_scroll_sensitivity.desc": "每次垂直滚动工具提示移动的像素数量",
-  "adaptivetooltips.opt.horizontal_scroll_sensitivity.title": "水平滚动灵敏度",
-  "adaptivetooltips.opt.horizontal_scroll_sensitivity.desc": "每次水平滚动工具提示移动的像素数量",
-  "adaptivetooltips.group.style.title": "设计",
-  "adaptivetooltips.group.style.desc": "修改工具提示外观的选项",
-  "adaptivetooltips.opt.tooltip_transparency.title": "工具提示透明度",
-  "adaptivetooltips.opt.tooltip_transparency.desc": "按百分比修改工具提示的透明度",
-  "adaptivetooltips.opt.remove_first_line_padding.title": "移除首行填充",
-  "adaptivetooltips.opt.remove_first_line_padding.desc": "从工具提示的第一行移除额外的2个像素的行填充",
-  "adaptivetooltips.wrap_text_behaviour.off": "关",
-  "adaptivetooltips.wrap_text_behaviour.off.desc": "不对工具提示应用换行",
-  "adaptivetooltips.wrap_text_behaviour.screen_width": "屏幕宽度",
-  "adaptivetooltips.wrap_text_behaviour.screen_width.desc": "根据屏幕宽度来换行工具提示。旨在与“基岩版居中”选项搭配使用。",
-  "adaptivetooltips.wrap_text_behaviour.remaining_width": "剩余宽度",
-  "adaptivetooltips.wrap_text_behaviour.remaining_width.desc": "根据直到屏幕边缘的剩余空间量来换行工具提示",
-  "adaptivetooltips.wrap_text_behaviour.remaining_width.warning": "仅适用于悬停工具提示定位！有关更多详细信息，请参见“仅重新定位悬停工具提示”的描述。",
-  "adaptivetooltips.wrap_text_behaviour.half_screen_width": "半屏幕宽度",
-  "adaptivetooltips.wrap_text_behaviour.half_screen_width.desc": "工具提示的最大宽度为屏幕宽度的一半，因此工具提示最多只能水平填充屏幕的一半。",
-  "adaptivetooltips.wrap_text_behaviour.smart": "智能",
-  "adaptivetooltips.wrap_text_behaviour.smart.desc": "当AT检测到一行宽度超过100像素时，它会选择下一个最大宽度作为工具提示的最大宽度。若未找到匹配项，则将换行至屏幕宽度的四分之三。",  
-  "adaptivetooltips.scroll_direction.reverse": "反转（Windows）",
-  "adaptivetooltips.scroll_direction.natural": "自然（macOS）",
-  "adaptivetooltips.format.pixels": "%s 像素",
-  "adaptivetooltips.format.vanilla": "原版",
-  "adaptivetooltips.bind.scroll": "启用工具提示滚动",
-  "adaptivetooltips.bind.horizontal_scroll": "启用水平滚动",
-  "adaptivetooltips.gui.awaiting_key": "按下一个键",
-  "adaptivetooltips.gui.require_opt.on": "需要启用“%s”",
-  "adaptivetooltips.gui.require_opt.off": "需要禁用“%s”"
+    "yacl3.config.adaptivetooltips:config.category.adaptivetooltips": "Adaptive Tooltips （自适应提示框）",
+    "yacl3.config.adaptivetooltips:config.category.adaptivetooltips.group.content_manipulation": "内容操作",
+    "yacl3.config.adaptivetooltips:config.category.adaptivetooltips.group.content_manipulation.desc": "这组选项可修改提示框的内容。",
+    "yacl3.config.adaptivetooltips:config.wrapText": "文本换行",
+    "yacl3.config.adaptivetooltips:config.wrapText.desc": "此模组如何为提示框文本换行。",
+    "yacl3.config.adaptivetooltips:config.overwriteVanillaWrapping": "覆盖原版换行",
+    "yacl3.config.adaptivetooltips:config.overwriteVanillaWrapping.desc": "停止原版对GUI中的提示框应用其文本换行，转而使用此模组的文本换行。",
+    "yacl3.config.adaptivetooltips:config.category.adaptivetooltips.group.positioning": "位置",
+    "yacl3.config.adaptivetooltips:config.category.adaptivetooltips.group.positioning.desc": "这组选项决定了提示框在屏幕上显示的位置。",
+    "yacl3.config.adaptivetooltips:config.prioritizeTooltipTop": "顶部优先",
+    "yacl3.config.adaptivetooltips:config.prioritizeTooltipTop.desc": "当提示框高于屏幕时，Minecraft默认会优先将底部贴合屏幕，截断顶部。此选项将其改为顶部，截断底部。",
+    "adaptivetooltips.opt.prioritize_tooltip_top.warn.align_to_corner": "防止对 %s 进行垂直检查，因为提示框从未高于屏幕。",
+    "yacl3.config.adaptivetooltips:config.bedrockCentering": "基岩版居中",
+    "yacl3.config.adaptivetooltips:config.bedrockCentering.desc": "当提示框过长而无法在屏幕上呈现时，会置于鼠标中心，而非左侧或右侧。",
+    "yacl3.config.adaptivetooltips:config.bestCorner": "角落对齐",
+    "yacl3.config.adaptivetooltips:config.bestCorner.desc": "当其他方法都失效时(包括基岩版居中)，Adaptive Tooltips 也会确定障碍最小的角落来对齐提示框。与屏幕宽度文本换行一起使用最佳。",
+    "yacl3.config.adaptivetooltips:config.alwaysBestCorner": "始终角落对齐",
+    "yacl3.config.adaptivetooltips:config.alwaysBestCorner.desc": "不必要时也始终角落对齐。",
+    "yacl3.config.adaptivetooltips:config.preventVanillaClamping": "防止原版固定",
+    "yacl3.config.adaptivetooltips:config.preventVanillaClamping.desc": "自1.19.3起，Minecraft通过设置最小位置为0来防止提示框偏离屏幕左侧。这会使其与悬停元素重叠，并干扰此模组的调整。",
+    "yacl3.config.adaptivetooltips:config.onlyRepositionHoverTooltips": "仅重新定位悬停提示框",
+    "yacl3.config.adaptivetooltips:config.onlyRepositionHoverTooltips.desc": "自1.19.3起，Minecraft添加了两种提示框定位方式：悬停和聚焦。“悬停”是老方法，“聚焦”则是将提示框置于按钮部件的上方或下方。禁用此设置可让此模组重新定位所有类型的定位器，包括“聚焦”和任何其他修改的。",
+    "yacl3.config.adaptivetooltips:config.useYACLTooltipPositioner": "YACL样式GUI提示框位置",
+    "yacl3.config.adaptivetooltips:config.useYACLTooltipPositioner.desc": "对所有GUI按钮小部件使用 YetAnotherConfigLib 的定位。（与您正在阅读的提示框位置相同）",
+    "yacl3.config.adaptivetooltips:config.category.adaptivetooltips.group.scrolling": "滚动",
+    "adaptivetooltips.group.scrolling.desc": "控制此模组中滚动功能的行为。",
+    "adaptivetooltips.label.scrolling_instructions": "在显示提示框时按住 滚动修饰键 并滑动，可上下滚动提示框，左右滑动可水平移动提示框。或同时按住 水平滚动修饰键 可水平滚动。",
+    "yacl3.config.adaptivetooltips:config.scrollKeyCode": "滚动修饰键",
+    "yacl3.config.adaptivetooltips:config.horizontalScrollKeyCode": "水平滚动修饰键",
+    "yacl3.config.adaptivetooltips:config.smoothScrolling": "平滑滚动",
+    "yacl3.config.adaptivetooltips:config.smoothScrolling.desc": "使提示框滚动看起来更流畅，不再是瞬间滚动。",
+    "yacl3.config.adaptivetooltips:config.scrollDirection": "滚动方向",
+    "yacl3.config.adaptivetooltips:config.scrollDirection.desc": "提示框滚动的方向。",
+    "yacl3.config.adaptivetooltips:config.verticalScrollSensitivity": "垂直滚动灵敏度",
+    "yacl3.config.adaptivetooltips:config.verticalScrollSensitivity.desc": "每次垂直滚动提示框移动的像素数量。",
+    "yacl3.config.adaptivetooltips:config.horizontalScrollSensitivity": "水平滚动灵敏度",
+    "yacl3.config.adaptivetooltips:config.horizontalScrollSensitivity.desc": "每次水平滚动提示框移动的像素数量。",
+    "yacl3.config.adaptivetooltips:config.category.adaptivetooltips.group.style": "外观",
+    "yacl3.config.adaptivetooltips:config.category.adaptivetooltips.group.style.desc": "修改提示框外观的选项",
+    "yacl3.config.adaptivetooltips:config.tooltipTransparency": "提示框透明度",
+    "yacl3.config.adaptivetooltips:config.tooltipTransparency.desc": "按百分比修改提示框的透明度。",
+    "yacl3.config.adaptivetooltips:config.removeFirstLinePadding": "移除首行填充",
+    "yacl3.config.adaptivetooltips:config.removeFirstLinePadding.desc": "移除提示框首行多出的2个像素的行填充。",
+    "adaptivetooltips.wrap_text_behaviour.off":"关闭",
+    "adaptivetooltips.wrap_text_behaviour.off.desc":"不为提示框进行换行。",
+    "adaptivetooltips.wrap_text_behaviour.screen_width":"屏幕宽度",
+    "adaptivetooltips.wrap_text_behaviour.screen_width.desc":"根据屏幕的宽度显示提示框。旨在与“基岩版居中”选项搭配使用。",
+    "adaptivetooltips.wrap_text_behaviour.remaining_width":"剩余宽度",
+    "adaptivetooltips.wrap_text_behaviour.remaining_width.desc":"根据屏幕边缘前的剩余空间大小为提示框换行。",
+    "adaptivetooltips.wrap_text_behaviour.remaining_width.warning":"仅适用于悬停提示框定位器！相关详细信息，请查看“仅重新定位悬停提示框”的说明。",
+    "adaptivetooltips.wrap_text_behaviour.half_screen_width":"半屏宽度",
+    "adaptivetooltips.wrap_text_behaviour.half_screen_width.desc":"提示框的最大宽度为屏幕宽度的一半，因此提示框最多只能水平占满屏幕的一半。",
+    "adaptivetooltips.wrap_text_behaviour.smart":"智能",
+    "adaptivetooltips.wrap_text_behaviour.smart.desc":"为比其他长得多的行换行，硬限制为屏幕宽度的3/4。",
+    "adaptivetooltips.scroll_direction.reverse":"反转 (Windows)",
+    "adaptivetooltips.scroll_direction.natural":"自然 (macOS)",
+    "adaptivetooltips.format.pixels":"%s像素",
+    "adaptivetooltips.format.vanilla":"原版",
+    "adaptivetooltips.bind.scroll":"启用提示框滚动",
+    "adaptivetooltips.bind.horizontal_scroll":"启用水平滚动",
+    "adaptivetooltips.gui.awaiting_key":"按下一个键",
+    "adaptivetooltips.gui.require_opt.on":"需要启用“%s”。",
+    "adaptivetooltips.gui.require_opt.off":"需要禁用“%s”。"
 }
